Fix weird overflows (I really need to rewrite this layout)

--- a/stylesheets/skeleton.css
+++ b/stylesheets/skeleton.css
@@ -193,9 +193,9 @@
 
     /* Note: Design for a width of 768px */
 
-@media only screen and (min-width: 768px) and (max-width: 959px) {
+@media only screen and (min-width: 767px) and (max-width: 959px) {
   .container {
-    width: 768px;
+    width: 754px;
   }
 
   .container .column,
